Fixed spacing issues and added media queries.
Fixed spacing for my top nav and tabs by using grids and CSS. Fixed
spacing for my title and logo with media queries.

--- a/css/general.css
+++ b/css/general.css
@@ -26,6 +26,8 @@ body {
     display: none;
     text-transform: uppercase;
     font-family: 'Megrim', sans-serif;
+    text-align: left;
+    text-align: center;
 }
 
 .nav a {
@@ -73,6 +75,11 @@ body {
 
 .nav-check:checked ~ .nav-label .nav-close {
     display: block;
+}
+
+.nav li {
+    display: inline-block;
+    text-align: center;
 }
 
 .bannerimg {
@@ -186,52 +193,16 @@ body {
     color: white;
 }
 
-@media only screen and (min-width: 25em) {
+.tabs {
+    margin: 0;
+    padding: 0;
 }
 
-@media only screen and (min-width: 38em) {
-    
-    .jesso {
-        float: left;
-        font-size: 4.5rem;
-    }
-
-    .leigh {
-        float: right;
-        font-size: 4.5rem;
-    }
-    
-    .logo {
-        width: 13rem;
-        top: 2rem;
-        left: calc(50% - 6.5rem);
-    }
-    
-    .name {
-        background-color: rgba(255, 255, 255, 0.4);
-        text-align: center;
-        overflow: hidden;
-        padding: 2em;
-        margin: 0;
-    }
-}
-
-@media only screen and (min-width: 60em) {
-    
-    .jesso {
-        float: left;
-        font-size: 6rem;
-    }
-
-    .leigh {
-        float: right;
-        font-size: 6rem;
-    }
-}
-
-.tabs li {
-    display: inline-block;
+.tabs-li {
+    display: block;
     text-align: center;
+    margin: 0 auto;
+    list-style-type: none;
 }
 
 [hidden] {
@@ -262,4 +233,58 @@ body {
 
 .tab-panels {
     text-align: center;
+}
+
+.nav-open {
+    width: 35px;
+}
+
+.nav-close {
+    width: 25px;
+}
+
+@media only screen and (min-width: 25em) {
+}
+
+@media only screen and (min-width: 38em) {
+    
+    .jesso {
+        float: left;
+        font-size: 5rem;
+        margin: 0 3rem;
+    }
+
+    .leigh {
+        float: right;
+        font-size: 5rem;
+        margin: 0 3rem;
+    }
+    
+    .logo {
+        width: 13rem;
+        top: 2rem;
+        left: calc(50% - 6.5rem);
+    }
+}
+
+@media only screen and (min-width: 60em) {
+    
+    .logo {
+        width: 25rem;
+        top: -1rem;
+        left: calc(50% - 12.5rem);
+    }
+    
+    .jesso {
+        float: left;
+        font-size: 8rem;
+        left: 50%;
+        
+    }
+
+    .leigh {
+        float: right;
+        font-size: 8rem;
+        right: 50%;
+    }
 }
